Fix menu being hidden by page_container overflow

--- a/app/assets/stylesheets/global/_base.scss
+++ b/app/assets/stylesheets/global/_base.scss
@@ -5,6 +5,10 @@ body {
   font-family: $font_family-primary;
   overflow-x: hidden;
   min-height: 100vh;
+  &.menu-open {
+    height: 100vh;
+    overflow-y: hidden;
+  }
 }
 
 h1 {
@@ -88,9 +92,8 @@ input[type="submit"] {
 
 #page_container {
   transition-duration: 1s;
-  &.active {
+  &.menu-open {
     height: 100vh;
-    overflow: hidden;
     margin-right: 25rem;
     @include media(medium) {
       margin-right: 0rem;
